--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Topo -->
         <header id="Topo">
             <div class="topo">
-                <span class="barra-logo quiz-topo" ><a href="index.html" translate="no">Quiz-Dev</a></span>
+                <span class="barra-logo quiz-topo" ><a href="index.html" translate="no"><img src="img/logo.png" alt="Quiz-DevBr"></a></span>
                 <span id="data" class="barra-data quiz-topo"></span>
             </div>
         </header>
