--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <footer>
+        <footer class="hide">
             <div class="jogadores" id="footer"></div>
            
         </footer>
