--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/listaJogadores.css">
     <link rel="stylesheet" href="css/modal.css">
-    <title>Quiz - Dev</title>
+    <title>DevQuiz-Br</title>
 </head>
 
 <body>
